--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,6 @@
     font-family: 'Bebas';
 }
 
-
 main{
     height: 100vh;
     width: 100%;
@@ -21,6 +20,16 @@ main{
     background-size: cover;
 }
 
+.intro{
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+}
+.center-this{
+    flex: 1;
+    display: flex;
+    align-items: center;
+}
 
 
 body{
@@ -41,7 +50,8 @@ iframe{
 
 .welcome{
     font-family: 'Bebas';
-    font-size: 4rem;
+    font-size: 5rem;
+    z-index: 2;
 }
 
 .welcome-2{
